--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 	<name>Hello World Web Application Repository</name>
 	<description>Simplest possible Java Webapp</description>
 	<distributionManagement>
-   		 <repository>
+    		<repository>
         		<id>central</id>
         		<name>hello-world-war</name>
-        		<url>https://trialis10t3.jfrog.io/artifactory/hello-world-war-libs-release</url>
+        		<url>https://trialtaz9zs.jfrog.io/artifactory/hello-world-war-libs-release</url>
     		</repository>
 	</distributionManagement>
 
