--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -19,6 +19,18 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Configure Maven settings
+      run: |
+          mkdir -p ~/.m2
+          echo "<settings>
+                  <servers>
+                    <server>
+                      <id>hello-world-war</id>
+                      <username>anuharish52@gmail.com</username>
+                      <password>cmVmdGtuOjAxOjE3NjkwODA5NDg6eUljbENZOUpZaXBUbHRISFR6VUJhVjRPOG5S</password>
+                    </server>
+                  </servers>
+                </settings>" > ~/.m2/settings.xml
 
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn clean deploy
