--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.1</version>
 			</plugin>
+  
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+			        <artifactId>sonar-maven-plugin</artifactId>
+			        <version>3.9.0.1503</version>
+			 </plugin>
+
 		</plugins>
 	</build>
 
