--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -19,18 +19,36 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+        
     - name: Configure Maven settings
       run: |
           mkdir -p ~/.m2
           echo "<settings>
                   <servers>
                     <server>
-                      <id>hello-world-war</id>
+                      <id>hello-world-war-new</id>
                       <username>${{ secrets.ARTIFACTORY_USERNAME }}</username>
                       <password>${{ secrets.ARTIFACTORY_API_KEY }}</password>
                     </server>
                   </servers>
-                </settings>" > ~/.m2/settings.xml
-
+                </settings>" > ~/.m2/settings.xml        
     - name: Build with Maven
-      run: mvn clean deploy
+      run: mvn clean package
+      # Step 5: Run SonarQube analysis
+    - name: SonarQube Scan
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Store the SonarQube token in GitHub Secrets
+      run: mvn clean verify sonar:sonar -Dsonar.projectKey=chinnidhi_hello-world-war -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.organization=chinnidhi -Dsonar.branch.name=master
+
+    # Step 6: Wait for the Quality Gate to be successful
+    - name: Wait for SonarCloud Quality Gate and Fail on Failure
+      run: |
+          response=$(curl -s -X GET -u "${{ secrets.SONAR_TOKEN }}": \
+            "https://sonarcloud.io/api/qualitygates/project_status?projectKey=chinnidhi_hello-world-war")
+          status=$(echo $response | jq -r .projectStatus.status)
+          echo "Quality Gate status: $status"
+          if [ "$status" != "OK" ]; then
+            echo "Quality Gate failed. Exiting."
+            exit 1
+          fi
+
