--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -38,13 +38,13 @@ jobs:
     - name: SonarQube Scan
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Store the SonarQube token in GitHub Secrets
-      run: mvn clean verify sonar:sonar -Dsonar.projectKey=AHP1609_hello-world-war -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.organization=AHP1609 -Dsonar.branch.name=master
+      run: mvn clean verify sonar:sonar -Dsonar.projectKey=ahp1609_hello-world-war -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.organization=ahp1609 -Dsonar.branch.name=master
 
     # Step 6: Wait for the Quality Gate to be successful
     - name: Wait for SonarCloud Quality Gate and Fail on Failure
       run: |
           response=$(curl -s -X GET -u "${{ secrets.SONAR_TOKEN }}": \
-            "https://sonarcloud.io/api/qualitygates/project_status?projectKey=AHP1609_hello-world-war")
+            "https://sonarcloud.io/api/qualitygates/project_status?projectKey=ahp1609_hello-world-war")
           status=$(echo $response | jq -r .projectStatus.status)
           echo "Quality Gate status: $status"
           if [ "$status" != "OK" ]; then
