--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 
 <distributionManagement>
     <repository>
-        <id>hello-world-war-new</id>
-        <name>hello-world-war-new-libs-release</name>
-        <url>http://18.208.223.75:8081/artifactory/hello-world-war-new-libs-release</url>
+        <id>hello-world-war</id>
+        <name>hello-world-war-libs-release</name>
+        <url>http://13.235.77.79:8082/artifactory/hello-world-war-libs-release/</url>
     </repository>
 </distributionManagement>
 	<build>
